RTP using/closing invalid descriptor

#0  0x00007f7a1caf49e5 in raise () at /lib64/libc.so.6
#1  0x00007f7a1cadd8a4 in abort () at /lib64/libc.so.6
#2  0x00007f7a1cadd789 in _nl_load_domain.cold () at /lib64/libc.so.6
#3  0x00007f7a1caed026 in  () at /lib64/libc.so.6
#4  0x00007f7a1cf456db in vlc_close (fd=<optimized out>) at ../../vlc/src/posix/filesystem.c:115
#5  0x00007f79b802ffec in vlc_datagram_Close (dgs=0x7f7968003f28) at ../../vlc/modules/access/rtp/datagram.c:50
#6  0x00007f7a1ceb4e46 in module_unneed (obj=obj@entry=0x7f7968000f40, module=0xdff2e0) at ../../vlc/src/modules/modules.c:304
#7  0x00007f7a1cec9734 in vlc_access_Destroy (access=0x7f7968000f40) at ../../vlc/src/input/access.c:70
#8  0x00007f7a1cefbb6a in vlc_stream_Delete (s=0x7f7968000f40) at ../../vlc/src/input/stream.c:137
#9  0x00007f7a1cee20c9 in demux_Delete (demux=<optimized out>) at ../../vlc/include/vlc_demux.h:291
#10 InputSourceDestroy (in=0xe95660) at ../../vlc/src/input/input.c:2879
#11 0x00007f7a1cee977c in End (p_input=p_input@entry=0xe95c30) at ../../vlc/src/input/input.c:1456
#12 0x00007f7a1cee99d2 in Run (data=0xe95c30) at ../../vlc/src/input/input.c:478
#13 0x00007f7a1cc8d3f9 in start_thread () at /lib64/libpthread.so.0
#14 0x00007f7a1cbb84c3 in clone () at /lib64/libc.so.6