access: rtp: don't use invalid socket descriptor

refs #26126